<resources>
    <string name="app_name">EshopSample</string>
    <string name="eshopimage">eshopImage</string>
    <string name="pc_tower">pc tower</string>
    <string name="pc_screen">pc screen</string>
    <string name="add_to_cart">add to cart</string>
    <string name="select_pc_tower">pc tower</string>
    <string name="select_pc_screen">pc screen</string>
    <string name="select_personal_computer">personal computer</string>
    <string name="select_workstation">workstation</string>
    <string name="memory_gb">memory in GB</string>
    <string name="cpu_frequency_in_Hz">cpu frequency in Hz</string>
    <string name="cancel">cancel</string>
    <string name="pc_screen_inches">pc screen in inches</string>
    <string name="hard_disk_gb">hard disk in GB</string>
    <string name="windows">Windows</string>
    <string name="linux">Linux</string>
    <string name="cart">cart</string>
    <string name="todo">TODO</string>
</resources>