<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pcScreenMainLayoutDialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/pcScreenDialogTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/pcScreenMainLayoutDialog"
        android:text="@string/pc_screen"
        android:textColor="@color/primary"
        android:textSize="30sp"
        android:gravity="center_horizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pcScreenInchesDialogTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pcScreenDialogTextView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="10sp"
        android:layout_margin="2sp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pcScreenDialogEditText"
            android:inputType="number"
            android:maxLength="9"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addToCartPcScreenDialog"
        app:layout_constraintTop_toBottomOf="@id/pcScreenInchesDialogTextInputLayout"
        android:text="@string/add_to_cart"
        android:layout_margin="2sp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButtonPcScreenDialog"
        app:layout_constraintTop_toBottomOf="@id/addToCartPcScreenDialog"
        android:text="@string/cancel"
        android:layout_margin="2sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>